# itch_aggregator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  zone.toml
agents/skills/: zone-workspace-dependencies.md
benchmarks/: kernel_bench.cu  parser_bench.cpp
src/: main.cpp
src/cuda/: aggregate_kernel.cu  decode_kernel.cu  kernels.cuh  snapshot_kernel.cu
src/parser/: itch_parser.cpp  itch_parser.hpp  message_types.hpp  order_hash.hpp
src/pipeline/: batch_assembler.cpp  batch_assembler.hpp  cpu_reference.cpp  cpu_reference.hpp  ring_buffer.hpp  snapshot.hpp
tests/: itch_builder.hpp  test_assembler.cpp  test_kernels.cpp  test_order_hash.cpp  test_parser.cpp
tools/: make_fixture.py  make_synthetic.py
validation/: validate_counts.py
